--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="MohammedAli Khan_InternshalaResume.pdf" class="btn" download>Download CV</a>
         </div>
 
         <div class="profession-container">
@@ -243,3 +243,4 @@
 </body>
 
 </html>
+
