--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             </p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.instagram.com/doomguy.x/"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61569809561735"><i class='bx bxl-facebook'></i></a>
+                <a href="https://x.com/D00MGUYx"><i class='bx bxl-twitter'></i></a>
+                <a href="www.linkedin.com/in/mohammed-ali-khan-b05582297"><i class='bx bxl-linkedin'></i></a>
             </div>
 
             <a href="MohammedAli Khan_InternshalaResume.pdf" class="btn" download>Download CV</a>
@@ -243,4 +243,5 @@
 </body>
 
 </html>
+
 
