--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="social-media">
                 <a href="https://www.instagram.com/doomguy.x/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61569809561735" target="_blank"><i class='bx bxl-facebook'></i></a>
+                <a href="https://github.com/D00MGUYx" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://x.com/D00MGUYx" target="_blank"><i class='bx bxl-twitter'></i></a>
                 <a href="https://www.linkedin.com/in/mohammed-ali-khan-b05582297/" target="_blank"><i class='bx bxl-linkedin'></i></a>
             </div>
@@ -243,6 +243,7 @@
 </body>
 
 </html>
+
 
 
 
